--- a/apps/console-cipe-repro/project.json
+++ b/apps/console-cipe-repro/project.json
@@ -2,7 +2,7 @@
   "name": "console-cipe-repro",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/console-cipe-repro",
-  "projectType": "application",
+  "projectType": "applications",
   "tags": [],
   "// targets": "to see all targets run: nx show project console-cipe-repro --web",
   "targets": {}
